Fix pmd and findbugs warnings.